# gd32-freertos-cmake-example

./: .gitignore  CMakeLists.txt  GD32F4xx.svd  LICENSE  README.md  arm-none-eabi-gcc.cmake  gd32f4xx_flash.ld  startup_gd32f407_427.s
FreeRTOS/: CMakeLists.txt
FreeRTOS/FreeRTOS-Config/: FreeRTOSConfig.h
FreeRTOS/FreeRTOS-Kernel/portable/GCC/ARM_CM4F/: port.c  portmacro.h
FreeRTOS/FreeRTOS-Plus/FreeRTOS-Plus-CLI/: FreeRTOS_CLI.h  Sample-CLI-commands.c  serial.c  serial.h
bsp/: bsp.c  bsp.h  def.h  generate_def.py  repeat_def.h
bsp/inc/: gpio.h  iic.h  timer.h  usart.h
bsp/src/: gpio.c  iic.c  timer.c  usart.c
firmware/: CMakeLists.txt
firmware/CMSIS/: CMakeLists.txt
firmware/CMSIS/GD/GD32F4xx/Include/: gd32f4xx.h
firmware/CMSIS/GD/GD32F4xx/Source/: syscalls.c  system_gd32f4xx.c
firmware/gd32f4xx_standard_peripheral/: CMakeLists.txt
firmware/gd32f4xx_standard_peripheral/Include/: gd32f4xx_enet.h
firmware/gd32f4xx_standard_peripheral/Source/: gd32f4xx_enet.c
stl/: CMakeLists.txt
stl/inc/: filter.h  pid.h  rqueue.h
stl/src/: filter.c  pid.c  rqueue.c
user/: gd32f4xx_it.c  main.c
